--- a/index.html
+++ b/index.html
@@ -3,9 +3,123 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+
+		<title>Home | Grey's Assignment 1</title>
 	</head>
 
 	<body>
+		<header class="h-bar">
+			<img class="h-logo" src="img/logo-blue.png" />
+
+			<nav class="main-nav">
+				<a href="index.html">Home</a>
+				<a href="courses/courses.html">Courses</a>
+				<a href="classroom/classroom.html">Students</a>
+				<a href="http://blog.brainstation.it">Blog</a>
+			</nav>
+
+			<div class="h-drop"><a href="mailto:hello@world.com">Email Us</a></div>
+		</header>
+
+		<div class="container">
+			<div class="b-cont">
+				<img src="img/blue-xray-brain-medium.jpg" />
+
+				<div class="body-head">
+					<h1>Learn to Code</h1>
+					<h4>Programming is the future</h4>
+				</div>
+
+				<div class="body-copy">
+					<p class="quote">"Learning to write programs stretches your mind, and helps you think better, creates a way of thinking about things that I think is helpful in all domains."</p>
+
+					<p class="name">Bill Gates - Chairman, Microsoft</p>
+
+					<p class="quote">"For most people on Earth, the digital revolution hasn't even started yet. Within the next 10 years, all that will change. Let's get the whole world coding!"</p>
+
+					<p class="name">Eric Schmidt - Executive Chairman, Google</p>
+				</div>
+			</div>
+
+			<div class="sidebar">
+				<div class="sb-head">
+					<h4>Front-End Tecnologies</h4>
+					<hr>
+				</div>
+
+				<div class-"sb-body">
+					<img src="img/html5.png">
+					<p>HTML5 & CSS3</p>
+
+					<img src="img/github.png">
+					<p>GitHub</p>
+
+					<img src="img/jquery.png">
+					<p>jQuery</p>
+
+					<img src="img/js.png">
+					<p>JavaScript</p>
+
+				</div>
+			</div>
+		</div>
+
+		
+
+		<footer class="f-cont">
+			<hr>
+
+			<div class="f-box">
+				<div class="f-copy">
+					<p class="legal">&copy 2014, Your Name Here</p>
+				</div>
+
+				<div class="f-social">
+					<nav class="group">
+						<a href="http//:www.facebook.com" class="f-social facebook"><p>Facebook</p></a>
+						<a href="http://www.twitter.com" class="f-social twitter"><p>Twitter</p></a>
+						<a href="http://www.linkedin.com" class="f-social linkedin"><p>LinkedIn</p></a>
+						<a href="http://plus.google.com" class="f-social google"><p>Google Plus</p></a>
+					</nav>
+				</div>
+			</div>
+		</footer>
 
 	</body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
