last-minute update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<nav class="main-nav">
 				<a href="index.html">Home</a>
 				<a href="courses/courses.html">Courses</a>
-				<a href="classroom/classroom.html">Students</a>
+				<a href="classroom/classroom.html">Classroom</a>
 				<a href="http://blog.brainstation.it">Blog</a>
 			</nav>
 
@@ -71,7 +71,7 @@
 
 			<div class="f-box">
 				<div class="f-copy">
-					<p class="legal">&copy 2014, Your Name Here</p>
+					<p class="legal">&copy 2014, Grey Thompson</p>
 				</div>
 
 				<div class="f-social">
