--- a/classroom/classroom.html
+++ b/classroom/classroom.html
@@ -15,7 +15,7 @@
 			<nav class="main-nav">
 				<a href="../index.html">Home</a>
 				<a href="../courses/courses.html">Courses</a>
-				<a href="classroom.html">Students</a>
+				<a href="classroom.html">Classroom</a>
 				<a href="http://blog.brainstation.it">Blog</a>
 			</nav>
 
@@ -42,7 +42,27 @@
 						</ul>		   
 					</div>        
 				</div>
-			</div>	
+			</div>
+		</div>	
+
+		<footer class="f-cont">
+			<hr>
+
+			<div class="f-box">
+				<div class="f-copy">
+					<p class="legal">&copy 2014, Grey Thompson</p>
+				</div>
+
+				<div class="f-social">
+					<nav class="group">
+						<a href="http//:www.facebook.com" class="f-social facebook"><p>Facebook</p></a>
+						<a href="http://www.twitter.com" class="f-social twitter"><p>Twitter</p></a>
+						<a href="http://www.linkedin.com" class="f-social linkedin"><p>LinkedIn</p></a>
+						<a href="http://plus.google.com" class="f-social google"><p>Google Plus</p></a>
+					</nav>
+				</div>
+			</div>
+		</footer>
 
 		<script type="text/javascript" src="../js/lib/jquery-2.1.0.min.js"></script>
         <script src="../js/jquery.anythingslider.min.js"></script>
