post-presentation upate

--- a/courses/courses.html
+++ b/courses/courses.html
@@ -34,11 +34,8 @@
 		                <nav class="group">
 		                    <a href="#" class="btn" data-tab="tab1">Front-End</a>
 		                    <a href="#" class="btn" data-tab="tab2">Back-End</a>
-		                    <a href="#" class="btn" data-tab="tab3">Mobile</a>
-						<div class="new-banner">NEW</div>
-
+		                    <a href="#" class="btn" data-tab="tab3">Mobile<div class="new-banner">NEW</div></a>
 		                </nav>
-
 		               
 		                <div class="content" id="tab1">
 			            	<h1>Front-End Development</h1>
@@ -75,7 +72,7 @@
 				</div>
 			</div>
 		</footer>
-		
+
 		<script type="text/javascript" src="../js/lib/jquery-2.1.0.min.js"></script>
         <script type="text/javascript" src="../js/app.js"></script>
 	</body>
